--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,383 @@
-body {
+/******************************** GENERAL STYLES ********************************/
+@font-face {
+  font-family: 'Novecentosanswide-Bold';
+  src: url("../fonts/novecento_sans_wide_bold-webfont.eot");
+  src: url("../fonts/novecento_sans_wide_bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/novecento_sans_wide_bold-webfont.woff") format("woff"), url("../fonts/novecento_sans_wide_bold-webfont.ttf") format("truetype"), url("../fonts/novecento_sans_wide_bold-webfont.svg#novecento_sans_wide_bookbold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: 'Novecentosanswide-Light';
+  src: url("../fonts/novecento_sans_wide_light-webfont.eot");
+  src: url("../fonts/novecento_sans_wide_light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/novecento_sans_wide_light-webfont.woff") format("woff"), url("../fonts/novecento_sans_wide_light-webfont.ttf") format("truetype"), url("../fonts/novecento_sans_wide_light-webfont.svg#novecento_sans_widelight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* line 31, style.scss */
+html, body {
+  min-width: 320px;
+  overflow-x: scroll;
+}
+
+/* line 36, style.scss */
+body {
+  background-color: #dcddd8;
+  font-family: 'Novecentosanswide-Light', sans-serif;
+  font-weight: 100;
+  font-size: 18px;
+  text-align: center;
+}
+
+/* line 44, style.scss */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 51, style.scss */
+h1, h2, h3 {
+  font-family: 'Novecentosanswide-Bold', sans-serif;
+  font-weight: 700;
+}
+
+/* line 56, style.scss */
+h1 {
+  font-size: 52px;
+  margin: 62px 0 0;
+  text-transform: uppercase;
+}
+
+/* line 62, style.scss */
+h2 {
+  font-size: 20px;
+  margin: 0 auto;
+}
+
+/* line 67, style.scss */
+h3 {
+  font-size: 30px;
+  margin-top: 30px;
+}
+
+/* line 72, style.scss */
+p {
+  font-size: 16px;
+  line-height: 1.1em;
+}
+/* line 75, style.scss */
+p:last-of-type {
+  margin-bottom: 0;
+}
+
+/* line 80, style.scss */
+a, i {
+  text-decoration: none;
+  -webkit-transition: color .3s ease-in-out;
+  -moz-transition: color .3s ease-in-out;
+  -ms-transition: color .3s ease-in-out;
+  -o-transition: color .3s ease-in-out;
+  transition: color .3s ease-in-out;
+}
+/* line 87, style.scss */
+a:focus, i:focus {
+  outline: none;
+}
+
+/* line 92, style.scss */
+i {
+  color: black;
+}
+/* line 94, style.scss */
+i:hover {
+  color: #ffe500;
+}
+
+/* line 99, style.scss */
+ul, li {
+  list-style: none;
+}
+
+/* line 103, style.scss */
+header {
+  background: white;
+  width: 100%;
+  top: 0;
+  position: fixed;
+  z-index: 500;
+  display: none;
+}
+
+/* line 112, style.scss */
+nav {
+  display: flex;
+  height: 87px;
+  z-index: 10;
+}
+/* line 116, style.scss */
+nav li {
+  font-size: 20px;
+  padding: 30px 22px;
+  width: 50%;
+  text-transform: uppercase;
+}
+/* line 121, style.scss */
+nav li a {
+  color: black;
+}
+/* line 123, style.scss */
+nav li a:hover {
+  color: #ffe500;
+}
+
+/* line 131, style.scss */
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+
+/* line 136, style.scss */
+.clearfix:after {
+  clear: both;
+}
+
+/* line 140, style.scss */
+.clearfix {
+  zoom: 1;
+  /* ie 6/7 */
+}
+
+/******************************** HOME ********************************/
+/* line 145, style.scss */
+#home {
+  color: black;
+  height: 600px;
+  margin-top: -42px;
+  margin-bottom: 250px;
+}
+
+/* line 152, style.scss */
+#intro-photo {
+  background: url("../assets/me.png") no-repeat center -6px;
+  background-size: 100%;
+  width: 100px;
+  height: 100px;
+  margin: -40px auto 0;
+  position: relative;
+  border: 4px solid white;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  text-indent: -9999em;
+  opacity: 0;
+}
+
+/* line 167, style.scss */
+.intro {
+  background-color: white;
+  width: 100%;
+  height: 65%;
+  padding-top: 100px;
+  position: relative;
+  top: 0;
+  z-index: -1;
+  opacity: 0;
+}
+/* line 176, style.scss */
+.intro p {
+  color: #5E5E5E;
+  font-size: 16px;
+  margin-top: 0;
+  text-transform: uppercase;
+}
+
+/* line 184, style.scss */
+#arrow {
+  margin-top: 190px;
+  opacity: 0;
+}
+/* line 187, style.scss */
+#arrow i {
+  color: rgba(0, 0, 0, 0.4);
+}
+/* line 189, style.scss */
+#arrow i:hover {
+  color: #ffe500;
+}
+
+/******************************** WORK ********************************/
+/* line 197, style.scss */
+#work-container {
+  padding-top: 120px;
+}
+
+/* line 201, style.scss */
+.work-item {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto 80px;
+  position: relative;
+}
+/* line 206, style.scss */
+.work-item img {
+  width: 100%;
+}
+/* line 209, style.scss */
+.work-item .photo {
+  width: 100%;
+}
+/* line 212, style.scss */
+.work-item .reveal {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  margin-top: -4px;
+  -webkit-transition: opacity .3s ease-in-out;
+  -moz-transition: opacity .3s ease-in-out;
+  -ms-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out;
+}
+/* line 223, style.scss */
+.work-item .reveal .info {
+  background-color: white;
+  color: black;
+  padding: 20px 0 24px;
+  width: 100%;
+  height: 100%;
+}
+/* line 229, style.scss */
+.work-item .reveal .info .info-inner {
+  width: 100%;
+}
+/* line 231, style.scss */
+.work-item .reveal .info .info-inner p {
+  margin-top: 4px;
+}
+/* line 238, style.scss */
+.work-item:hover .reveal {
+  opacity: 1;
+}
+
+/******************************** CONTACT ********************************/
+/* line 246, style.scss */
+#contact {
+  background-color: black;
+  color: white;
+  height: 150px;
+  margin-top: 100px;
+}
+
+/* line 253, style.scss */
+#contact-container {
+  width: 100%;
+  height: 100%;
+  display: table;
+}
+
+/* line 259, style.scss */
+#icons {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+/* line 263, style.scss */
+#icons li {
+  width: 50px;
+  display: inline-block;
+}
+/* line 267, style.scss */
+#icons i {
+  color: white;
+  font-size: 24px;
+}
+/* line 270, style.scss */
+#icons i:hover {
+  color: #ffe500;
+}
+
+/******************************** MEDIA QUERIES ********************************/
+@media only screen and (min-width: 768px) {
+  /* line 279, style.scss */
+  h1 {
+    font-size: 80px;
+  }
+
+  /* line 282, style.scss */
+  h2 {
+    font-size: 42px;
+  }
+
+  /* line 285, style.scss */
+  p {
+    font-size: 23px;
+    line-height: 1.5em;
+  }
+
+  /* line 290, style.scss */
+  nav li {
+    padding: 30px 36px;
+  }
+
+  /* line 295, style.scss */
+  .intro p {
+    font-size: 23px;
+  }
+
+  /* line 299, style.scss */
+  #work-container {
+    padding-top: 140px;
+  }
+
+  /* line 302, style.scss */
+  .work-item {
+    margin-bottom: 150px;
+  }
+  /* line 304, style.scss */
+  .work-item .reveal {
+    margin-top: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    position: absolute;
+  }
+  /* line 312, style.scss */
+  .work-item .reveal .info {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 0;
+  }
+  /* line 316, style.scss */
+  .work-item .reveal .info .info-inner {
+    top: 50%;
+    left: 0;
+    right: 0;
+    position: absolute;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  /* line 324, style.scss */
+  .work-item .reveal .info .info-inner p {
+    margin-top: 1em;
+  }
+
+  /* line 331, style.scss */
+  #contact {
+    margin-top: 200px;
+  }
+
+  /* line 334, style.scss */
+  .box-shadow {
+    box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.1);
+  }
 }
