--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,28 +9,36 @@
 		src: url('../fonts/Tuffy/Tuffy_Bold.ttf') format('truetype');
 }
 
+@font-face {
+	font-family: 'Basic title'; 
+		src: url('../fonts/basictitlefont.ttf') format('truetype');
+}
+
 body {
 	/*background-color: #F0E8E8;*/
 	background-color: #E5E5E5;
 	text-align: center;
-	font-family: 'Tuffy', sans-serif;
+	font-family: 'Basic title', sans-serif;
+	font-size: 24px;
 }
 
 a {
 	text-decoration: none;
+	color: #000000;
 }
 
 ul, li {
 	list-style: none;
 }
 
-h3 {
-	font-size: 36px;
+h1 {
+	font-size: 62px;
 }
 
 header {
 	width: 100%;
 	position: fixed;
+	top: 0;
 	background: #fff;
 	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -45,6 +53,7 @@ section {
 nav {
 	width: 390px;
 	height: 81px;
+	padding-right: 50px;
 	float: right;
 	z-index: 10;
 	display: none;
@@ -54,6 +63,7 @@ nav li {
 	float: right;
 	width: 70px;
 	padding: 30px;
+	font-size: 26px;
 }
 
 nav li a:hover {
@@ -97,7 +107,8 @@ nav li a:hover {
 /******************************** HOME ********************************/
 
 #bg {
-	background: url('../images/jelly.jpg') no-repeat left;
+	background: url('../images/jelly.jpg') no-repeat center;
+	background-size: 100%;
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -110,18 +121,23 @@ nav li a:hover {
 	height: 600px;
 	margin-bottom: 250px;
   color: black;
-  text-shadow:
+  /*text-shadow:
     -1px -1px 0 #FFFFFF,
     1px -1px 0 #FFFFFF,
     -1px 1px 0 #FFFFFF,
-    1px 1px 0 #FFFFFF;
+    1px 1px 0 #FFFFFF;*/
 }
 
 .intro {
-	padding: 150px;
-	margin-left: 130px;
-	top: 0;
+	background-color: rgba(255, 255, 255, 1);
+		-webkit-box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
+		box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
 	position: relative;
+	width: 400px;
+	margin: 200px auto 0;
+	padding: 80px;
+	top: 0;
+/*	font-size: 24px;*/
 	z-index: -1;
 	display: none;
 }
@@ -177,3 +193,19 @@ nav li a:hover {
 #contact_container {
 	padding: 150px 0; 
 }
+
+
+#photo {
+	background: url(../images/baxme.png) no-repeat 0 0;
+	border-radius: 50%;
+	border: 4px solid white;
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 1);
+	width: 296px;
+	height: 296px;
+    text-indent: -9999em;
+	margin: 50px auto 10px;
+
+}
+	#photo:hover {
+		background: url(../images/baxme.png) no-repeat 0 -367px;
+	}
