--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,21 +1,17 @@
 /******************************** GENERAL STYLES ********************************/
 
 @font-face {
-	font-family: 'Tuffy'; 
-		src:url('../fonts/Tuffy/Tuffy.ttf') format('truetype');				
-}
-@font-face {
-	font-family: 'Tuffy_Bold'; 
-		src: url('../fonts/Tuffy/Tuffy_Bold.ttf') format('truetype');
-}
-
-@font-face {
 	font-family: 'Basic title'; 
 		src: url('../fonts/basictitlefont.ttf') format('truetype');
 }
 
 body {
-	/*background-color: #F0E8E8;*/
+/*	background: url('../images/jelly.jpg') no-repeat;
+	background-size: 100%;
+	background-attachment: local;
+	overflow: auto;
+  position: relative; */
+
 	background-color: #E5E5E5;
 	text-align: center;
 	font-family: 'Basic title', sans-serif;
@@ -36,13 +32,13 @@ h1 {
 }
 
 header {
-	width: 100%;
-	position: fixed;
-	top: 0;
 	background: #fff;
-	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-	-moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+		-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+		-moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	width: 100%;
+	top: 0;
+	position: fixed;
 	z-index: 500;
 }
 
@@ -51,19 +47,19 @@ section {
 }
 
 nav {
-	width: 390px;
 	height: 81px;
+	width: 390px;
 	padding-right: 50px;
 	float: right;
-	z-index: 10;
 	display: none;
+	z-index: 10;
 }
 
 nav li {
-	float: right;
+	font-size: 26px;
 	width: 70px;
 	padding: 30px;
-	font-size: 26px;
+	float: right;
 }
 
 nav li a:hover {
@@ -71,7 +67,7 @@ nav li a:hover {
 }
 
 .border {
-	background-color: white;
+	background-color: #FFFFFF;
 	position: fixed;
 	z-index: 1000;
 }
@@ -120,68 +116,91 @@ nav li a:hover {
 #home {
 	height: 600px;
 	margin-bottom: 250px;
-  color: black;
-  /*text-shadow:
-    -1px -1px 0 #FFFFFF,
-    1px -1px 0 #FFFFFF,
-    -1px 1px 0 #FFFFFF,
-    1px 1px 0 #FFFFFF;*/
+  color: #000000;
 }
 
 .intro {
 	background-color: rgba(255, 255, 255, 1);
+	box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
 		-webkit-box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
-		box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
-	position: relative;
 	width: 400px;
 	margin: 200px auto 0;
 	padding: 80px;
+	position: relative;
 	top: 0;
-/*	font-size: 24px;*/
-	z-index: -1;
 	display: none;
+	z-index: -1;
 }
 
 /******************************** WORK ********************************/
 
+#work {
+	margin: 500px auto;
+}
+
 .work_container {
-	margin-top: 500px;
-	padding-right: 100px;
-	text-align: right;
+	padding-left: 100px; 
+	text-align: left;
 }
 
 .work_container img {
 	border: 3px solid #A8A8A8;
-	top: 0;
 	position: relative;
+	top: 0;
+}
+
+#image_a {
+	margin-left: -20px;
 }
 
 #image_b {
-	margin-right: 100px;
+	margin-left: 100px;
 }
 
 #image_c {
-	margin-right: 200px;
+	margin-left: 20px;
+}
+
+#image_d {
+	margin-left: 120px;
 }
 
 #image_f {
-	margin-right: -40px; 
+	margin-left: 120px; 
 }
 
 #image_e {
-	margin-right: 100px;
+	margin-left: -30px;
 }
 
 /******************************** ABOUT ********************************/
 
 #about {
-	height: 800px;
-	clear: both;
+	height: 700px;
+	margin-top: 500px;
 }
 
 #about_container {
-	padding: 200px 100px; 
+	background-color: #FFFFFF;
+	width: 60%;
+	margin: 0 auto;
+	padding: 20px 100px; 
 }
+
+#photo {
+	background: url() no-repeat 0 0;
+	border-radius: 50%;
+	border: 4px solid white;
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 1);
+	width: 296px;
+	height: 296px;
+    text-indent: -9999em;
+	margin: 50px auto 10px;
+
+}
+	#photo:hover {
+		background: url() no-repeat 0 -367px;
+	}
 
 /******************************** CONTACT ********************************/
 
@@ -193,19 +212,3 @@ nav li a:hover {
 #contact_container {
 	padding: 150px 0; 
 }
-
-
-#photo {
-	background: url(../images/baxme.png) no-repeat 0 0;
-	border-radius: 50%;
-	border: 4px solid white;
-    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 1);
-	width: 296px;
-	height: 296px;
-    text-indent: -9999em;
-	margin: 50px auto 10px;
-
-}
-	#photo:hover {
-		background: url(../images/baxme.png) no-repeat 0 -367px;
-	}
