--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -51,7 +51,7 @@ nav {
 	width: 390px;
 	padding-right: 50px;
 	float: right;
-	display: none;
+	/*display: none;*/
 	z-index: 10;
 }
 
@@ -100,6 +100,11 @@ nav li a:hover {
 	height: 16px;
 }
 
+.box_shadow {
+	box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
+		-webkit-box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
+}
+
 /******************************** HOME ********************************/
 
 #bg {
@@ -121,8 +126,6 @@ nav li a:hover {
 
 .intro {
 	background-color: rgba(255, 255, 255, 1);
-	box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
-		-webkit-box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.1);
 	width: 400px;
 	margin: 200px auto 0;
 	padding: 80px;
@@ -182,7 +185,7 @@ nav li a:hover {
 
 #about_container {
 	background-color: #FFFFFF;
-	width: 60%;
+	width: 50%;
 	margin: 0 auto;
 	padding: 20px 100px; 
 }
@@ -205,10 +208,17 @@ nav li a:hover {
 /******************************** CONTACT ********************************/
 
 #contact {
-	height: 350px;
-	clear: both;
+	height: 230px;
+	margin-top: 250px;
+	color: #FFFFFF;
 }
 
 #contact_container {
-	padding: 150px 0; 
+	background-color: #000000;
+	height: 230px;
+	padding: 10px 0; 
+}
+
+#contact_container a {
+	color: #FFFFFF;
 }
