--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 header {
-	background: #fff;
+	background: #FFFFFF;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 		-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 		-moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -51,7 +51,6 @@ nav {
 	width: 390px;
 	padding-right: 50px;
 	float: right;
-	/*display: none;*/
 	z-index: 10;
 }
 
@@ -125,14 +124,18 @@ nav li a:hover {
 }
 
 .intro {
-	background-color: rgba(255, 255, 255, 1);
+	background-color: #FFFFFF;
 	width: 400px;
 	margin: 200px auto 0;
 	padding: 80px;
 	position: relative;
 	top: 0;
-	display: none;
 	z-index: -1;
+}
+
+#arrow {
+	margin-top: 120px;
+	color: rgba(0, 0, 0, 0.4);
 }
 
 /******************************** WORK ********************************/
@@ -141,12 +144,12 @@ nav li a:hover {
 	margin: 500px auto;
 }
 
-.work_container {
+#work_container {
 	padding-left: 100px; 
 	text-align: left;
 }
 
-.work_container img {
+#work_container img {
 	border: 3px solid #A8A8A8;
 	position: relative;
 	top: 0;
@@ -176,6 +179,22 @@ nav li a:hover {
 	margin-left: -30px;
 }
 
+#descriptions {
+	width: 320px;
+	float: right;
+}
+
+.info {
+	background-color: #FFFFFF;
+	width: 300px;
+	margin: 180px 200px 180px 0;
+	float: right;
+}
+
+.info p {
+	margin: 4px;
+}
+
 /******************************** ABOUT ********************************/
 
 #about {
@@ -187,23 +206,25 @@ nav li a:hover {
 	background-color: #FFFFFF;
 	width: 50%;
 	margin: 0 auto;
-	padding: 20px 100px; 
+	padding: 10px 100px; 
 }
 
 #photo {
-	background: url() no-repeat 0 0;
-	border-radius: 50%;
-	border: 4px solid white;
-    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 1);
+	background: url('../images/profile.jpg') top no-repeat;
+	background-size: 100%;
 	width: 296px;
 	height: 296px;
-    text-indent: -9999em;
-	margin: 50px auto 10px;
-
+	margin: -30px auto 0;
+	border-radius: 50%;
+	border: 4px solid #FFFFFF;
+    /*box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 1);*/
+  text-indent: -9999em;
 }
-	#photo:hover {
-		background: url() no-repeat 0 -367px;
-	}
+
+#photo:hover {
+	background: url('../images/profile_2.jpg') top no-repeat;
+	background-size: 100%;
+}
 
 /******************************** CONTACT ********************************/
 
