--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,12 +6,11 @@
 }
 
 body {
-/*	background: url('../images/jelly.jpg') no-repeat;
-	background-size: 100%;
-	background-attachment: local;
-	overflow: auto;
-  position: relative; */
-
+	background: url('../images/jelly.jpg') no-repeat center center fixed;
+		-webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
 	background-color: #E5E5E5;
 	text-align: center;
 	font-family: 'Basic title', sans-serif;
@@ -106,17 +105,6 @@ nav li a:hover {
 
 /******************************** HOME ********************************/
 
-#bg {
-	background: url('../images/jelly.jpg') no-repeat center;
-	background-size: 100%;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	top: 0;
-	z-index: -2;
-}
-
 #home {
 	height: 600px;
 	margin-bottom: 250px;
@@ -165,18 +153,27 @@ nav li a:hover {
 
 #image_c {
 	margin-left: 20px;
+	margin-top: 100px;
 }
 
 #image_d {
 	margin-left: 120px;
-}
-
-#image_f {
-	margin-left: 120px; 
+	margin-top: 50px;
 }
 
 #image_e {
 	margin-left: -30px;
+	margin-top: 80px;
+}
+
+#image_f {
+	margin-left: 120px; 
+	margin-top: 50px;
+}
+
+#image_h {
+	margin-left: 100px;
+	margin-top: 400px;
 }
 
 #descriptions {
@@ -187,7 +184,7 @@ nav li a:hover {
 .info {
 	background-color: #FFFFFF;
 	width: 300px;
-	margin: 180px 200px 180px 0;
+	margin: 200px 200px 230px 0;
 	float: right;
 }
 
@@ -199,7 +196,7 @@ nav li a:hover {
 
 #about {
 	height: 700px;
-	margin-top: 500px;
+	margin-top: 1200px;
 }
 
 #about_container {
@@ -210,36 +207,73 @@ nav li a:hover {
 }
 
 #photo {
-	background: url('../images/profile.jpg') top no-repeat;
+	background: url('../images/popcorn3.jpg') no-repeat 0 -160px;
 	background-size: 100%;
 	width: 296px;
 	height: 296px;
 	margin: -30px auto 0;
 	border-radius: 50%;
 	border: 4px solid #FFFFFF;
-    /*box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 1);*/
   text-indent: -9999em;
+	position: relative;
 }
 
 #photo:hover {
-	background: url('../images/profile_2.jpg') top no-repeat;
+	background: url('../images/popcorn3.jpg') top no-repeat;
 	background-size: 100%;
+	-webkit-transition: background 1s ease;
+	-moz-transition: background 1s ease;
+	-ms-transition: background 1s ease;
+	-o-transition: background 1s ease;
+	transition: background 1s ease;
 }
 
 /******************************** CONTACT ********************************/
 
 #contact {
-	height: 230px;
+	height: 200px;
 	margin-top: 250px;
 	color: #FFFFFF;
+	background-color: #000000;
 }
 
 #contact_container {
-	background-color: #000000;
-	height: 230px;
-	padding: 10px 0; 
+	width: 400px;
+	margin: 0 auto;
+	padding: 10px;
+	position: relative;
 }
 
-#contact_container a {
+#icons {
+	width: 200px;
+	margin: 0 auto;
+	position: relative;
+}
+
+#icons a {
 	color: #FFFFFF;
+}
+
+#icons a:hover {
+	color: #D9D9D9;
+}
+
+#icons li {
+	width: 50px;
+	float: left;
+}
+
+/******************************** MEDIA QUERIES ********************************/
+
+@media only screen and (max-width: 1150px) {
+	#work_container {
+		width: 1100px;
+		padding-left: 40px;
+	}
+}
+
+@media only screen and (max-width: 620px) {
+	#contact {
+		margin-top: 600px;
+	}
 }
