--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -186,10 +186,27 @@ nav li a:hover {
 	width: 300px;
 	margin: 200px 200px 230px 0;
 	float: right;
+	position: relative;
 }
 
 .info p {
 	margin: 4px;
+}
+
+.info i:hover {
+	color: #D9D9D9;
+}
+
+#info_b {
+	margin-top: 800px
+}
+
+#info_c {
+	margin-top: 1250px
+}
+
+#info_d {
+	margin-top: 1750px
 }
 
 /******************************** ABOUT ********************************/
@@ -214,7 +231,7 @@ nav li a:hover {
 	margin: -30px auto 0;
 	border-radius: 50%;
 	border: 4px solid #FFFFFF;
-  text-indent: -9999em;
+	text-indent: -9999em;
 	position: relative;
 }
 
