--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -296,11 +296,12 @@ nav li a:hover {
 }
 
 
+
 #construction {
 	background-color: #FFFFFF;
 	width: 300px;
 	height: 120px;
-	margin: 200px auto;
+	margin: 200px auto;g
 	padding: 20px;
 	text-align: center;
 }
