--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -301,7 +301,7 @@ nav li a:hover {
 	background-color: #FFFFFF;
 	width: 300px;
 	height: 120px;
-	margin: 200px auto;g
+	margin: 200px auto;
 	padding: 20px;
 	text-align: center;
 }
