--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -185,8 +185,10 @@ nav li a:hover {
 	background-color: rgba(255, 255, 255, 0.9);
 	width: 300px;
 	margin: 200px 200px 230px 0;
+	padding: 2px;
 	float: right;
 	position: relative;
+	text-align: center;
 }
 
 .info p {
