--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -319,7 +319,7 @@ nav li a:hover {
 @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
 
 	body {
-		background-color: #E5E5E5;
+		background: #E5E5E5;
 	}
 
 	h1, h2 {
