--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,6 +23,11 @@
 }
 
 body {
+	background: -moz-linear-gradient(left,rgba(54,186,194,0.97) 0,rgba(60,211,173,0.97) 100%);
+	background: -webkit-gradient(linear,left top,right top,color-stop(0,rgba(54,186,194,0.97)),color-stop(100%,rgba(60,211,173,0.97)));
+	background: -webkit-linear-gradient(left,rgba(54,186,194,0.97) 0,rgba(60,211,173,0.97) 100%);
+	background: -o-linear-gradient(left,rgba(54,186,194,0.97) 0,rgba(60,211,173,0.97) 100%);
+	background: -ms-linear-gradient(left,rgba(54,186,194,0.97) 0,rgba(60,211,173,0.97) 100%);
 	background: linear-gradient(to right,rgba(54,186,194,0.97) 0,rgba(60,211,173,0.97) 100%);
 	text-align: center;
 	font-family: 'Novecentosanswide-Light', sans-serif;
